# GCP-Billing-Concierge

./: .gitignore  Makefile  README.md  pyproject.toml
Cloud-AI-FinOps-Agent/: agent.py
Cloud_AI_FinOps_Agent/: agent.py  prompt.py
Cloud_AI_FinOps_Agent/tools/: tools.py
GCP_billing_concierge/: .env.example  prompt.py
GCP_billing_concierge/tools/: tools.py
deployment_scripts/: create_sa.py
new_agent_evals/: billing_eval_dataset_fully_modern.evalset.json  eval_config.json  final_eval_results.md  iteration_summary.md
new_agent_evals/run_1776728874/: GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.2055562.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.2074873.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.208784.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.2101338.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.211494.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.2126803.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.2139404.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.215151.evalset_result.json  GCP_billing_concierge_billing_eval_dataset_fully_modern_1776728874.2166286.evalset_result.json  (+41 more)
new_agent_evals/scratch_pad_files/: billing_eval_dataset.evalset.json  (+9 more)
scripts/: create_sa.py  setup_billing_data.py
terraform/: main.tf  provider.tf  variables.tf
(+6 files in other folders)
